@@ -190,7 +190,7 @@ public class HelpTipDialog extends JDialog implements HyperlinkListener {
                 topMenu.add(m);
             }
             JMenuItem mi = new JMenuItem(tipTitle);
-            mi.addActionListener(new ObjectListener(new Integer(i)) {
+            mi.addActionListener(new ObjectListener(Integer.valueOf(i)) {
                 public void actionPerformed(ActionEvent ae) {
                     idx = ((Integer) theObject).intValue();
                     showTip();
